#####                              CHANGELOG                               #####
#####                                                                      #####
################################################################################

0.17.* UPDATES
--------------------------------------------------------------------------------
50: Prepared a stand-alone In-silico report script
49: Added the In-Silico section to the final report
48: Alignment stats are determined for the size selected in-silico prediction alignments
47: Alignment stats are determined for the full in-silico prediction alignments
46: Reads are now aligned agains the size selected in-silico prediction loci
45: Reads are now aligned agains the full in-silico prediction loci
44: More details on the welcoming screen
43: In situ predicted locations for ddRad digestion are now prepared and written to References/
42: Table design in Markdown adjusted
41: Cosmetics for finalReport, status messages printed into the final report were removed.
40: Plenty of scatterplots added to related metrics to sequencing depth
39: More exportable tables added
38: Harmonised the plot colours in the final report
37: Added more descriptions to the final report
36: Deduplication vs Coverage plot added
35: QC tables display now the full dataset, without any threshold
34: QC tables can now be exported
33: Server config information added to the reports
32: QC plots now show ommit the missing R2 output (and do not duplicate R1 to pretend it to be R2)
31: Expection added in finalReport in case FastQC/MultiQC report different binnings in their reports for R1 and R2
30: Internal improvement: Duplicated Chunk names in report-knitr files are allowed
29: Paths in the configuration file can now be relative
28: Special case for flanking site determination caught (in case alignment starts at base 0, bed could have been negativ)
27: FinalReport polished and more statistics added