@@ -7,7 +7,11 @@ maxLength <- as.numeric(maxLength)+1
 # Adjust the paths
 if(substr(refGenome.file,1,1)!="/") refGenome.file <- file.path(projFolder, refGenome.file)
 
-fasta <- ref.DNAseq(refGenome.file, subselect.contigs = FALSE)
+# The SimRAD default import function for fasta sequences fails for larger genomes, so I use an own one here
+#fasta <- ref.DNAseq(refGenome.file, subselect.contigs = FALSE)
+fasta <- importFA(refGenome.file)
+names(fasta) <- NULL
+
 enz1 <- strsplit(enz1.in, "")
 enz2 <- strsplit(enz2.in, "")
 
@@ -21,10 +25,8 @@ ddout <- insilico.digest(fasta, cut_site_5prime1 = enz1.1,
                          cut_site_5prime2 = enz2.1,
                          cut_site_3prime2 = enz2.2)
 
+names(ddout) <- paste0("> Location", 1:length(ddout))
 ddout.selected <- size.select(ddout, min.size = minLength, max.size = maxLength, graph = FALSE)
 
-names(ddout) <- paste0("> Location", 1:length(ddout))
 exportFA(ddout, file=full.file)
-
-names(ddout.selected) <- paste0("> SelectedLocation", 1:length(ddout.selected))
 exportFA(ddout.selected, file=selected.file)
